<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8f9fa"
    tools:context=".maps.layout.MapAgentActivity"
    android:focusableInTouchMode="true">

    <com.google.android.gms.maps.MapView
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/map_view"
        app:layout_constraintBottom_toTopOf="@+id/agent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_marginBottom="40dp"
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_pin_person"
        app:layout_constraintBottom_toBottomOf="@+id/map"
        app:layout_constraintEnd_toEndOf="@+id/map"
        app:layout_constraintStart_toStartOf="@+id/map"
        app:layout_constraintTop_toTopOf="@+id/map" />

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:foreground="@drawable/bg_adress"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/agent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:gravity="center"
        android:text="@string/pilih_agent"
        android:textColor="@color/abu"
        android:textSize="15sp"
        app:layout_constraintTop_toTopOf="@+id/linearLayout3"
        tools:layout_editor_absoluteX="10dp" />

    <TextView
        android:elevation="2dp"
        android:id="@+id/address_pick"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg_1"
        android:fontFamily="@font/poppins_regular"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="3"
        android:overScrollMode="always"
        android:padding="5dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textColor="@color/abu"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/agent" />

    <EditText
        android:id="@+id/address_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="1"
        android:background="@drawable/bg_1"
        android:elevation="2dp"
        android:hint="@string/catatan"
        android:fontFamily="@font/poppins_regular"
        android:gravity="top|left"
        android:inputType="textMultiLine"
        android:lines="2"
        android:overScrollMode="always"
        android:padding="5dp"
        android:scrollbarStyle="insideInset"
        android:scrollbars="vertical"
        android:textColor="@color/abu"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout3"
        app:layout_constraintStart_toStartOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/address_pick" />

    <Button
        android:id="@+id/buttonPick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_btn"
        android:backgroundTint="@null"
        android:elevation="10dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/request_pickup"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/address_pick"
        app:layout_constraintStart_toStartOf="@+id/address_pick"
        app:layout_constraintTop_toBottomOf="@+id/address_note" />
    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/laoding"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_margin="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/load1"
        android:visibility="gone"
        />
</androidx.constraintlayout.widget.ConstraintLayout>